:package: ajuste finos

--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@
       </div>
     </aside>
 
-    <section class="sessao-conhecimentos">
+   <section class="sessao-conhecimentos">
       <div class="sessao-header">
         <h1>Conhecimentos</h1>
       </div>
@@ -136,6 +136,61 @@
 
     </section>
 
+ <section class="sessao-projetos">
+    <div class="sessao-header">
+      <h1>Projetos</h1>
+    </div>
+
+    <div class="projetos">
+
+      <div class="cards">
+        <div class="card-img-wrapper">
+          <img src="/icons/proj1.jpg" alt="projeto 1" srcset="">
+          <div class="card-info">
+            <h2>Primeiro </h2>
+            <h3>Javascript </h3>
+
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id accusantium nihil nemo praesentium, minus
+              omnis. Harum repellat vitae dolores, inventore voluptatem rerum at veritatis accusamus optio minus
+              praesentium officiis architecto?</p>
+
+              <button>Saiba Mais</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img-wrapper">
+          <img src="/icons/proj2.jpg" alt="projeto 2" srcset="">
+      
+          <div class="card-info">
+            <h2> Segundo </h2>
+            <h3> Css</h3>
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores reiciendis sint aliquam, inventore
+              autem architecto vel? Iste vitae nemo deserunt iusto ullam ratione harum totam eveniet mollitia
+              accusantium! Doloremque, commodi.</p>
+              <button>Saiba Mais</button>
+          </div>  
+          </div>
+      </div>
+
+      <div class="cards">
+        <div class="card-img-wrapper">
+          <img src="/icons/proj3.jpg" alt="Projeto 3" srcset="">
+          <div class="card-info">
+            <h2> Terceiro </h2>
+            <h3> Html</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo facere fuga illum id mollitia corrupti
+              reprehenderit, eum nesciunt odio sequi esse nulla libero eos? Recusandae voluptates aliquid esse incidunt
+              et? </p>
+              <button>Saiba Mais</button>
+          </div>
+          </div>
+      </div>
+
+      </div>
+
+ </section>
 
   </div>
 
