:pakage: form orçamento

--- a/index.htm
+++ b/index.htm
@@ -221,6 +221,48 @@
       </div>
     </section>
 
+    <section class="sessao-orcamento">
+      
+      <div class="orcamento-wrapper">
+        <h1>Faça um Orçamento</h1>
+        
+        <form >
+          <label for="quantidade">Quantidade de Paginas:</label>
+            <input type="number" name="quantidade" id="quantidade">
+            <label for="js">Preciso de um Script em JavaScript!</label>
+            <input type="checkbox" name="js" id="js">
+            <label for="layot">Layout:</label>
+            <div class="group-layout">
+              <div>
+                <input type="radio" name="layot" id="layot-sim">
+                <label for="layout-sim">Preciso de um Layout</label>
+              </div>
+              <div>
+                <input type="radio" name="layot" id="layot-nao">
+                <label for="layot-nao">Já tenho um Layout!</label>
+              </div>
+            </div>
+
+            <label for="prazo">Prazo?</label>  
+            <input type="range" name="prazo" id="prazo">
+            <button type="submit">Enviar</button>
+
+        </form>
+
+      </div>
+
+
+
+    </section>
+
+
+
+
+
+
+
+
+
   </div>
 
 
