--- a/index.htm
+++ b/index.htm
@@ -195,19 +195,19 @@
         <div class="contato-rigth">
           <h1>Contato</h1>
 
-          <form>
+          <form id="forms-orc">
             <div class="input-group">
-              <input type="text" class="field" id="nome">
+              <input type="text" class="field" id="nome" name="nome">
               <label for="nome" class="field-label">Nome</label>
 
             </div>
             <div class="input-group">
-              <input type="text" class="field" id="email">
+              <input type="text" class="field" id="email" name="email">
               <label for="email" class="field-label">Email</label>
 
             </div>
             <div class="input-group">
-              <textarea class="field" id="msg"></textarea>
+              <textarea class="field" id="msg" name="msg"></textarea>
               <label for="msg" class="field-label">Mensagem</label>
 
             </div>
@@ -226,7 +226,7 @@
       <div class="orcamento-wrapper">
         <h1>Faça um Orçamento</h1>
         
-        <form id="forms-orc">
+        <form >
           <label for="quantidade">Quantidade de Paginas:</label>
             <input type="number" name="quantidade" id="qtde" min="1">
             <label for="js">Preciso de um Script, em JavaScript!</label>
