--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-  <title>Portifolio</title>
+  <title>Site Rafael</title>
 </head>
 
 <body>
