--- a/index.htm
+++ b/index.htm
@@ -267,7 +267,7 @@
       <footer>
         <div class="footer-content">
           <p>
-            Copyright &copy; 2021 Rafaek c. Todos os Direitos reservados.
+            Copyright &copy; 2021 Rafael c. Todos os Direitos reservados.
           </p>
           <div class="social-list">
 
